compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-1/neg/2.1.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 1 -> sentence 2
 * NUMBER: 1
 * DESCRIPTION: Not allowed hexadecimal real literals.
 */

konst konstue = 0x100.1
konst konstue = 0x100.0
konst konstue = 0X0.0
konst konstue = 0x00.0
konst konstue = 0x00.000
konst konstue = 0x001.000
konst konstue = 0xFA.1234567890
konst konstue = 0XAAAA.00000000001

konst konstue = 0x110000.41AB4135F54A
konst konstue = 0XAFCE.0ABCDEF
konst konstue = 0x0123456789ABCDEF.0123456789ABCDEF

konst konstue = 0.0X5F
konst konstue = 0.0x913530ABCDEF
konst konstue = 1234567.0x1234567895F
konst konstue = 10000000000.0x913530ABCDEF
konst konstue = 9.10x913530ABCDEF
konst konstue = .0XABCDEF
konst konstue = .0x0123456789

konst konstue = 0x0.0x0
konst konstue = 0X5F.0x11
konst konstue = 0x000001.0x000001
konst konstue = 0XABCDEF.0xABCDEF

konst konstue = 0x0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF.0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF
konst konstue = 0X0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF.01234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345
konst konstue = 1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345.0X1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123
konst konstue = 1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345.0xABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789AB
